<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tituloEventos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/eventos"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/filtros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/filtros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/lista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloEventos">

        <RadioButton
            android:id="@+id/empresarial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FF5722"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/evento_empresariais"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/universitario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/laranja"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/evento_universit_rio"
            android:textColor="@color/black" />

    </RadioGroup>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminateTint="@color/laranja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carregando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/carregando_eventos"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtros"
        tools:listitem="@layout/evento" />
</androidx.constraintlayout.widget.ConstraintLayout>