<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/valorTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/valor_do_pagamento"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/valor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/nomeCartao"
        app:layout_constraintStart_toStartOf="@id/valorTitulo"
        app:layout_constraintTop_toBottomOf="@id/valorTitulo"
        tools:text="R$ 200,00" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomeCartao"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/nome_no_cart_o"
        app:layout_constraintBottom_toTopOf="@id/numeroCartao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito_italic"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numeroCartao"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/n_mero_do_cart_o"
        app:layout_constraintBottom_toTopOf="@id/dataVencimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeCartao">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="1234567890 "
            android:fontFamily="@font/nunito_italic"
            android:inputType="number"
            android:lines="1"
            android:maxLength="19" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dataVencimento"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/vencimento_mm_aa"
        app:layout_constraintBottom_toTopOf="@id/cep"
        app:layout_constraintEnd_toStartOf="@id/codigoSeguranca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numeroCartao">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="1234567890/"
            android:fontFamily="@font/nunito_italic"
            android:inputType="number"
            android:lines="1"
            android:maxLength="5" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codigoSeguranca"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/cod_seguran_a"
        app:layout_constraintBottom_toTopOf="@id/cep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dataVencimento"
        app:layout_constraintTop_toBottomOf="@id/numeroCartao">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="1234567890"
            android:fontFamily="@font/nunito_italic"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cep"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/cep"
        app:layout_constraintBottom_toTopOf="@id/pagarBotao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataVencimento">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="1234567890-"
            android:fontFamily="@font/nunito_italic"
            android:inputType="number"
            android:lines="1"
            android:maxLength="9" />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/pagarBotao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/botao_costumizado"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/pagar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>