<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imagemUsuario"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/black" />

    <TextView
        android:id="@+id/usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/imagemUsuario"
        app:layout_constraintEnd_toStartOf="@id/botaosair"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/imagemUsuario"
        app:layout_constraintTop_toTopOf="@id/imagemUsuario"
        tools:text="Rafael Neves" />

    <android.widget.Button
        android:id="@+id/botaosair"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/botao_costumizado"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/sair"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/imagemUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imagemUsuario" />

    <android.widget.Button
        android:id="@+id/botaoMeusIngressos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/botao_costumizado"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/meus_ingressos"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/botaoEventos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.widget.Button
        android:id="@+id/botaoEventos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/botao_costumizado"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/eventos"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botaoMeusIngressos" />

</androidx.constraintlayout.widget.ConstraintLayout>